fix(cli and server): issue of uploading dotenv file to prod environment
